--- a/grid.html
+++ b/grid.html
@@ -55,6 +55,8 @@
       <div style="background-color: lightpink; height: 200px;">1fr</div>
       <div style="background-color: lightblue; height: 200px;">1fr</div>
       <div style="background-color: lightpink; height: 200px;">1fr</div>
+      <div style="background-color: rgb(213, 8, 39); height: 200px;">5fr</div>
+
     </div>
   </body>
 </html>
